Closed Bug 242467 Opened 22 years ago Closed 21 years ago

The patch for bug 242212 breaks builder.rebuild for remote XUL

Categories

(Core :: XUL, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: enndeakin, Assigned: enndeakin)

References

()

Details

(Keywords: regression)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.5) Gecko/20031007 Firebird/0.7 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.5) Gecko/20031007 Firebird/0.7 The patch in bug 242212 breaks somenode.builder.rebuild in remote XUL. From the bug: "If it is, we'll need to either put this code back, or give this class classinfo and say that it's a "DOM object" and it's fine to access it from web content" Reproducible: Always Steps to Reproduce:
Keywords: regression
Depends on: 242212
Assignee: varga → timeless
Status: UNCONFIRMED → NEW
Ever confirmed: true
Assignee: timeless → enndeakin
Status: NEW → ASSIGNED
Attachment #170670 - Flags: review?(jst)
Comment on attachment 170670 [details] [diff] [review] add classinfo for template builder r+sr=jst
Attachment #170670 - Flags: superreview+
Attachment #170670 - Flags: review?(jst)
Attachment #170670 - Flags: review+
Does this affect tree.view where tree has flags="dont-build-content"?
Shouldn't do. The tree builder already has ClassInfo. But I did do some tests on trees and they work fine.
Of course it does; somehow I overlooked that fact while reading the patch (I suspect the local time of 00:36 was a contributory factor!)
checked in
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Component: XP Toolkit/Widgets: Trees → XUL
QA Contact: xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: