Bug 242467 The patch for bug 242212 breaks builder.rebuild for remote XUL patch by enndeakin@sympatico.ca r=jst sr=jst